--- a/followdocs/blog3/app/views/articles/index.html.erb
+++ b/followdocs/blog3/app/views/articles/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Articles</h1>
+<% @articles.each do |article| %>
+    <h2>
+        Article: <%= article.title %>
+    </h2>
+    <p>
+        <%= article.body %>
+    </p>
+<% end %>
+
