--- a/followdocs/blog3/app/views/articles/index.html.erb
+++ b/followdocs/blog3/app/views/articles/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Articles</h1>
+<h1>List of Articles</h1>
+<% i = 1 %>
 <% @articles.each do |article| %>
     <h2>
-        Article: <%= article.title %>
+        Article<%= i %>: <%= link_to article.title, article %>
+        <% i = i + 1%>
     </h2>
-    <p>
-        <%= article.body %>
-    </p>
 <% end %>
+
+<%= link_to "New Article", new_article_path %>
 
